# xray-16

res/gamedata/shaders/gl/: ssr.h
res/gamedata/shaders/gl/iostructs/: p_lod.h  p_particle.h
src/Common/: PlatformLinux.inl
src/Layers/xrRender/: Animation.cpp  Blender.cpp  Blender_Recorder.cpp  Blender_Recorder_R2.cpp  Blender_Recorder_StandartBinding.cpp  ColorMapManager.cpp  D3DUtils.cpp  D3DXRenderBase.cpp  DetailManager.cpp  DetailManager_CACHE.cpp  DetailManager_Decompress.cpp  DetailManager_VS.cpp  DetailManager_soft.cpp  DetailModel.cpp  LightTrack.cpp  ParticleGroup.cpp  du_box.cpp  du_cone.cpp  du_cylinder.cpp  du_sphere.cpp  du_sphere_part.cpp  dxDebugRender.cpp  dxEnvironmentRender.cpp  dxFontRender.cpp  dxImGuiRender.cpp  dxLensFlareRender.cpp  dxLensFlareRender.h  dxObjectSpaceRender.cpp  dxParticleCustom.cpp  dxRainRender.cpp  dxRenderFactory.cpp  dxRenderFactory.h  dxStatGraphRender.cpp  dxThunderboltDescRender.cpp  dxThunderboltRender.cpp  dxUIRender.cpp  dxUIShader.cpp  dxWallMarkArray.h  occRasterizer.cpp
src/Layers/xrRender/blenders/: BlenderDefault.cpp  Blender_Blur.cpp  Blender_BmmD.cpp  Blender_Editor_Selection.cpp  Blender_Editor_Wire.cpp  Blender_LaEmB.cpp  Blender_Lm(EbB).cpp  Blender_Model.cpp  Blender_Model_EbB.cpp  Blender_Particle.cpp  Blender_Screen_GRAY.cpp  Blender_Screen_SET.cpp  Blender_Shadow_World.cpp  Blender_Vertex.cpp  Blender_Vertex_aref.cpp  Blender_default_aref.cpp  Blender_detail_still.cpp  Blender_tree.cpp
src/Layers/xrRenderDX9/: BufferUtils.cpp  dx9HW.cpp  dx9HWCaps.cpp  dx9ResourceManager_Resources.cpp  dx9SH_RT.cpp  dx9r_constants_cache.cpp
src/Layers/xrRenderPC_R1/: CMakeLists.txt
src/utils/mp_balancer/: xr_ini_ex.h
src/utils/mp_gpprof_server/libraries/gamespy/common/: gsAssert.h  gsPlatform.h
src/utils/mp_gpprof_server/libraries/gamespy/common/ps3/SpeexSpursTaskManager/: SpuFakeDma.h  spursAlignedObjectArray.h
src/xrCore/: LocatorAPI.cpp
src/xrEngine/: Device_Initialize.cpp  XR_IOConsole.cpp
src/xrGame/: ai_stalker_alife.cpp
src/xrGame/ui/: UIPdaWnd.cpp
